--- a/src/layouts/LessonLayout.module.scss
+++ b/src/layouts/LessonLayout.module.scss
@@ -12,6 +12,11 @@
   justify-content: space-between;
   border-bottom: 1px solid #e5e7eb;
   background-color: #ffffff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
 
   h1 {
     font-size: 1rem;
@@ -23,7 +28,6 @@
     font-size: 1rem;
     margin-left: 10px;
     text-decoration: none;
-    
   }
 
   button {
@@ -44,6 +48,7 @@
 .body {
   flex: 1;
   display: flex;
+  margin-top: 60px;
 }
 
 .content {
