--- a/src/pages/lesson/Lesson.module.scss
+++ b/src/pages/lesson/Lesson.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 1.5rem;
   padding: 2rem;
 }
